--- a/kage.cabal
+++ b/kage.cabal
@@ -7,7 +7,7 @@ license-file: LICENSE
 copyright: 2016 Florent Lioult
 maintainer: florent@hihan.org
 homepage: https://github.com/Chatanga/kage#readme
-synopsis: Initial project template from stack
+synopsis: A sandbox for playing with Haskell, OpenGL, Physics, AI, etc.
 description:
     Please see README.md
 category: Graphics
@@ -41,31 +41,36 @@ library
         vector -any,
         freetype2 -any,
         parallel -any,
-        rosezipper -any
+        rosezipper -any,
+        lens -any
     default-language: Haskell2010
     hs-source-dirs: src
     other-modules:
-        Application
-        Buffer
-        Debug
-        Error
-        Font
-        FunctionalGL
-        Geometry
-        Ext.Program
-        Ext.Shader
-        Ext.Uniform
-        Ext.Utils
-        Ext.Variables
-        Heightmap
-        Layouts
-        Misc
-        Random
-        Scene
-        Shader
-        Texture
-        View
-        World
+        Common.Debug
+        Common.Misc
+        Common.Random
+        Graphics.Catalog
+        Graphics.Color
+        Graphics.Ext.Program
+        Graphics.Ext.Shader
+        Graphics.Ext.Uniform
+        Graphics.Ext.Utils
+        Graphics.Ext.Variables
+        Graphics.Application
+        Graphics.Buffer
+        Graphics.Error
+        Graphics.Font
+        Graphics.FunctionalGL
+        Graphics.Geometry
+        Graphics.Heightmap
+        Graphics.Layouts
+        Graphics.Scene
+        Graphics.Shader
+        Graphics.Texture
+        Graphics.View
+        Graphics.World
+        Physics.Aircraft
+        Physics.RigidBody
 
 executable kage-exe
     main-is: Main.hs
@@ -81,7 +86,8 @@ test-suite kage-test
     main-is: Spec.hs
     build-depends:
         base -any,
-        kage -any
+        kage -any,
+        linear -any
     default-language: Haskell2010
     hs-source-dirs: test
     ghc-options: -threaded -rtsopts -with-rtsopts=-N
