--- a/kage.cabal
+++ b/kage.cabal
@@ -1,50 +1,24 @@
-name: kage
-version: 0.1.0.0
-cabal-version: >=1.10
-build-type: Simple
-license: BSD3
-license-file: LICENSE
-copyright: 2016 Florent Lioult
-maintainer: florent@hihan.org
-homepage: https://github.com/Chatanga/kage#readme
-synopsis: A sandbox for playing with Haskell, OpenGL, Physics, AI, etc.
-description:
-    Please see README.md
-category: Graphics
-author: Florent Lioult
+name:           kage
+version:        1.0
+cabal-version:  >=1.10
+build-type:     Simple
+license:        MIT
+license-file:   LICENSE
+homepage:       https://github.com/Chatanga/kage#readme
+author:         Florent Lioult
+maintainer:     florent@hihan.org
+copyright:      2017 Florent Lioult
+category:       Graphics
+synopsis:       A sandbox for playing with Haskell, OpenGL, Physics, AI, etc.
 
 source-repository head
     type: git
     location: https://github.com/Chatanga/kage
 
 library
+    hs-source-dirs: src
     exposed-modules:
         Lib
-    build-depends:
-        base >=4.7 && <5,
-        containers -any,
-        GLFW-b -any,
-        JuicyPixels -any,
-        OpenGL -any,
-        OpenGLRaw -any,
-        ObjectName -any,
-        StateVar -any,
-        filepath -any,
-        hslogger -any,
-        linear -any,
-        mtl -any,
-        random -any,
-        text -any,
-        bytestring -any,
-        regex-compat -any,
-        time -any,
-        vector -any,
-        freetype2 -any,
-        parallel -any,
-        rosezipper -any,
-        lens -any
-    default-language: Haskell2010
-    hs-source-dirs: src
     other-modules:
         Common.Debug
         Common.Misc
@@ -71,12 +45,36 @@ library
         Graphics.World
         Physics.Aircraft
         Physics.RigidBody
+    build-depends:
+        base >=4.7 && <5,
+        containers,
+        GLFW-b,
+        JuicyPixels,
+        OpenGL,
+        OpenGLRaw,
+        ObjectName,
+        StateVar,
+        filepath,
+        hslogger,
+        linear,
+        mtl,
+        random,
+        text,
+        bytestring,
+        regex-compat,
+        time,
+        vector,
+        freetype2,
+        parallel,
+        rosezipper,
+        lens
+    default-language: Haskell2010
 
 executable kage-exe
     main-is: Main.hs
     build-depends:
-        base -any,
-        kage -any
+        base,
+        kage
     default-language: Haskell2010
     hs-source-dirs: app
     ghc-options: -threaded -rtsopts -with-rtsopts=-N
@@ -85,9 +83,10 @@ test-suite kage-test
     type: exitcode-stdio-1.0
     main-is: Spec.hs
     build-depends:
-        base -any,
-        kage -any,
-        linear -any
+        base,
+        kage,
+        linear
     default-language: Haskell2010
     hs-source-dirs: test
     ghc-options: -threaded -rtsopts -with-rtsopts=-N
+
